--- a/4-experiments/experimento2-dataset4.ipynb
+++ b/4-experiments/experimento2-dataset4.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "integrated-aircraft",
+   "id": "demanding-medication",
    "metadata": {},
    "source": [
     "# Experimento 1\n",
     "***\n",
-    "- Conjunto de Dados: NIH\n",
+    "- Conjunto de Dados: VinBigData\n",
     "- Testando a equalização de histograma em comparação com a mudança típica de escala"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fewer-galaxy",
+   "id": "laughing-kazakhstan",
    "metadata": {},
    "source": [
-    "### Importando os pacotes necessários"
+    "### Importação dos pacotes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strange-jumping",
+   "id": "applicable-billion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.metrics import confusion_matrix, precision_recall_fscore_support\n",
-    "import urllib.request\n",
-    "urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py', 'cxr8_dados.py')\n",
-    "from cxr8_dados import data_download, organize_csv, download_images, train_validation_test_split \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-apollo",
+   "id": "worst-fisher",
    "metadata": {},
    "source": [
     "### Pré-processamento nos dados"
@@ -58,112 +55,207 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elegant-medium",
+   "id": "regulation-costume",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# baixando dataframe\n",
-    "data_download('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/dataframe-info.csv', 'dataframe-info.csv')"
+    "# lendo os dados de um arquivo csv\n",
+    "dataframe = pd.read_csv('../datasets/archive (1)/vinbigdata/train.csv')\n",
+    "# criando uma coluna com os caminhos relativos as imagens\n",
+    "dataframe['image_path'] = '../datasets/archive (1)/vinbigdata/train/' + dataframe.image_id + '.jpg'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlimited-african",
+   "id": "necessary-medication",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# especificando o diretório com as imagens \n",
-    "IMAGE_DIR = \"/content/images/\""
+    "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proof-capitol",
+   "id": "widespread-enclosure",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# obtendo o dataframe organizando\n",
-    "dataframe = organize_csv('/content/dataframe-info.csv')"
+    "# visualizando os casos disponíveis\n",
+    "dataframe['class_name'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vietnamese-habitat",
+   "id": "informal-ottawa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualizando o dataframe\n",
-    "print(dataframe.head())\n",
-    "print('dataframe shape:', dataframe.shape)"
+    "# removendo os casos não relativos a distúrbios pulmonares\n",
+    "dataframe = dataframe[dataframe.class_name != 'Aortic enlargement']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Cardiomegaly']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Other lesion']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Consolidation']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intermediate-saudi",
+   "id": "plastic-master",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# particionando o dataset em dados de treino, validação e teste  \n",
-    "train_df, validation_df, test_df = train_validation_test_split(dataframe)"
+    "# separando os casos rotulados como normais e anormais\n",
+    "normal_cases = dataframe[(dataframe.class_id == 14) & (dataframe.class_name == 'No finding')]\n",
+    "abnormal_cases = dataframe[(dataframe.class_id != 14) & (dataframe.class_name != 'No finding')]\n",
+    "\n",
+    "print('total de dados após a filtração:', str(len(set(normal_cases['image_path'])) + len(set(abnormal_cases['image_path']))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forbidden-airplane",
+   "id": "secure-alignment",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualizando detalhes dos dados de treinamento\n",
-    "print(train_df.head())\n",
-    "print('train_df shape:', train_df.shape)"
+    "# removendo as imagens repetidas\n",
+    "normal_path = list(set(normal_cases['image_path']))\n",
+    "abnormal_path = list(set(abnormal_cases['image_path']))\n",
+    "\n",
+    "# criando dataframes especifos com caminhos para as imagens e rótulos\n",
+    "normal_data = pd.DataFrame(normal_path, columns = ['filepath'])\n",
+    "normal_data['target'] = 0\n",
+    "abnormal_data = pd.DataFrame(abnormal_path, columns = ['filepath'])\n",
+    "abnormal_data['target'] = 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adjacent-clear",
+   "id": "sudden-platform",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualizando detalhes dos dados de treinamento\n",
-    "print(validation_df.head())\n",
-    "print('validation_df shape:', validation_df.shape)"
+    "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "different-divorce",
+   "id": "prompt-embassy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualizando detalhes dos dados de teste \n",
-    "print(test_df.head())\n",
-    "print('validation_df shape:', test_df.shape)"
+    "# removendo 69% dos casos normais para balancear os dados\n",
+    "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sitting-works",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('quantidade de dados rotulados como normais:', len(normal))\n",
+    "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "funny-document",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenando os dataframes de casos normais e anormais\n",
+    "full_data = pd.concat([normal, abnormal_data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "golden-reading",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# misturando todos os dados do dataframe e reiniciando os valores dos índices \n",
+    "full_data = full_data.sample(frac = 1, axis = 0, random_state = 42).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alpha-poster",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modificando o formato dos dados para float32\n",
+    "dict_type = {'target': 'float32'}\n",
+    "full_data = full_data.astype(dict_type) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "medium-brand",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando os dados de treinamento e de teste\n",
+    "train_df, test_df = train_test_split(full_data, stratify = full_data['target'],\n",
+    "                                     test_size = 0.2, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "extraordinary-retrieval",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando os dados de validação dos dados de treinamento\n",
+    "train_df, validation_df = train_test_split(train_df, stratify = train_df['target'],\n",
+    "                                           test_size = 0.2, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dependent-collins",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualizando a quantidade de dados\n",
+    "print('quantidade de imagens de treinamento:', len(train_df['filepath']))\n",
+    "print('quantidade de rótulos de treinamento:', len(train_df['target']))\n",
+    "print('quantidade de imagens de teste:', len(test_df['filepath']))\n",
+    "print('quantidade de rótulos de teste:', len(test_df['target']))\n",
+    "print('quantidade de imagens de validação:', len(validation_df['filepath']))\n",
+    "print('quantidade de rótulos de validação:', len(validation_df['target']))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "periodic-standing",
+   "id": "western-current",
    "metadata": {},
    "source": [
-    "### Aplicando mudança de escala típica"
+    "### Aplicando equalização de histograma"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "located-discretion",
+   "id": "requested-pakistan",
    "metadata": {},
    "outputs": [],
    "source": [
     "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
-    "image_generator = ImageDataGenerator(rescale = 1./255.,\n",
+    "image_generator = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True,\n",
     "                                     rotation_range = 10, zoom_range = 0.2)\n",
     "\n",
     "# criando o gerador de imagens de treinamento \n",
@@ -190,7 +282,7 @@
     "                                                      target_size = (256, 256))\n",
     "\n",
     "# normalizando as imagens de teste \n",
-    "test_datagen = ImageDataGenerator(rescale = 1./255.)\n",
+    "test_datagen = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True)\n",
     "\n",
     "test_generator = test_datagen.flow_from_dataframe(\n",
     "                                                  dataframe = test_df, \n",
@@ -206,16 +298,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clinical-waterproof",
+   "id": "compatible-fetish",
    "metadata": {},
    "source": [
-    "### Preparando a rede neural"
+    "### Preparando a rede neural convolucional"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "purple-mobile",
+   "id": "anonymous-rotation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "middle-genome",
+   "id": "compact-knife",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-westminster",
+   "id": "double-sound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ambient-relationship",
+   "id": "found-baker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surgical-alias",
+   "id": "forward-guide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-integration",
+   "id": "vital-constitutional",
    "metadata": {},
    "outputs": [],
    "source": [
